--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -1,4 +1,4 @@
-name: Tests
+name: Scala CI
 
 on:
   push:
@@ -7,15 +7,20 @@ on:
     branches: [ master ]
 
 jobs:
-  test:
-    name: "CI"
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
         with:
-          java-version: 11
+          persist-credentials: false
 
-      - name: Run Unit tests
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'oracle'
+          java-version: '17'
+
+      - name: Run tests
         run: sbt test
