--- a/report/bibliography.yaml
+++ b/report/bibliography.yaml
@@ -689,3 +689,13 @@ haversine-wiki:
     value: https://en.wikipedia.org/wiki/Haversine_formula
     date: 2025-05-10
   note: "Wikipedia article detailing the Haversine formula, commonly used to calculate the great-circle distance between two points on a sphere given their longitudes and latitudes."
+
+gfg-c-introduction:
+  type: Article
+  title: C Language Introduction
+  date: 2025-05-08
+  url:
+    value: https://www.geeksforgeeks.org/c-language-introduction/
+    date: 2025-04-21
+  language: en
+  note: "An introductory article on the C programming language, covering its history, features, applications, and basic syntax, published on the GeeksforGeeks platform."
